datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id           String         @id @default(cuid())
  kakaoId      String         @unique
  kakaoProfile kakaoProfile[]
  email        String         @unique
  nickname     String?
  ageRange     String?
  birthday     String?
  gender       String?
  posts        Post[]
  role         Role
  createdAt    DateTime       @default(now())
  updatedAt    DateTime       @updatedAt
}

model kakaoProfile {
  id                String   @id @default(cuid())
  user              User?    @relation(fields: [userKakaoId], references: [kakaoId])
  userKakaoId       String?
  profileImageUrl   String?
  thumbnailImageUrl String?
  connectedAt       String?
  createdAt         DateTime @default(now())
}

model Post {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  published Boolean
  title     String
  content   String?
  author    User?    @relation(fields: [authorId], references: [id])
  authorId  String?
}

enum Role {
  ADMIN
  USER
  BLACK
}
