//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  kakaoId String [unique, not null]
  kakaoProfile kakaoProfile [not null]
  email String [unique, not null]
  nickname String
  ageRange String
  birthday String
  gender String
  posts Post [not null]
  role Role [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table kakaoProfile {
  id String [pk]
  user User
  userKakaoId String
  profileImageUrl String
  thumbnailImageUrl String
  connectedAt String
  createdAt DateTime [default: `now()`, not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Enum Role {
  ADMIN
  USER
  BLACK
}

Ref: kakaoProfile.userKakaoId > User.kakaoId

Ref: Post.authorId > User.id